namespace foll_backend.DeviceManagment.Interfaces.REST.Resources;

public record LinkDeviceResource(long PatientId);
